--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -731,49 +731,135 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xzcs9fzeD0_G"
-      },
-      "source": [],
-      "execution_count": 43,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qJq7a2qTD0_I"
-      },
-      "source": [],
-      "execution_count": 43,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sg7LdvptD0_J"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XSSMebXjD0_K"
+        "id": "xzcs9fzeD0_G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "335b486f-8a1c-45e2-ec36-32b689c4f512"
       },
       "source": [
-        "['Jetta Variant', 'Passat', 'Crossfox', 'DS5']"
+        "()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dpkdzrzRD0_M"
+        "id": "qJq7a2qTD0_I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "befae916-f0bb-46ea-940e-4b234657e6cc"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "1, 2, 3"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sg7LdvptD0_J",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b70ba75e-9647-4773-ac20-72c495fcd24f"
+      },
+      "source": [
+        "nome = 'Passat'\n",
+        "valor = 153000\n",
+        "(nome, valor)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Passat', 153000)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XSSMebXjD0_K",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "69b0d164-8722-4912-b492-2b52dba931a2"
+      },
+      "source": [
+        "nomes_carros = tuple(['Jetta Variant', 'Passat', 'Crossfox', 'DS5'])\n",
+        "nomes_carros"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Jetta Variant', 'Passat', 'Crossfox', 'DS5')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dpkdzrzRD0_M",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72c2ae8e-8e77-4fad-d30c-1fed7cc7a1f6"
+      },
+      "source": [
+        "type(nomes_carros)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tuple"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "markdown",
