--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -21,6 +21,52 @@
     },
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "htjoBLwiD0_F",
+        "AOBjxBk8D0_f",
+        "u85Aou8WD0_s",
+        "xo76nR8rD0_0",
+        "wfWzOuztD0_0",
+        "PQg-MLkGD0_-",
+        "KYeRqavFD1AD",
+        "KzmWbEltD1AD",
+        "SWlE6VTBD1AE",
+        "oWbWyDd0D1AI",
+        "yYNqIHJBD1AK",
+        "_z0JySuqD1AL",
+        "FodJVx5sD1AP",
+        "7pqdPOkYD1AP",
+        "JLs5c0DeD1AR",
+        "mNODkmHCD1AV",
+        "Q5J0R7d3D1Ag",
+        "QhoSRfPsD1Ai",
+        "E-agaqakD1Ai",
+        "qFj6Cc7dD1Ak",
+        "-NGRwX0AD1Al",
+        "-q3AlSg3D1Aq",
+        "5CfEcU58D1Aq",
+        "6w62Sl5ZD1A0",
+        "OADZiBP2D1A0",
+        "PwSlYSVAD1A2",
+        "8zNYrmFbD1A9",
+        "J44K-dMOD1A9",
+        "MQaK8GV5D1BA",
+        "uQ5lNnKrD1BD",
+        "2qa7RC03D1BD",
+        "kIey8_OcD1BF",
+        "VYVIKd1-D1BG",
+        "pJK2tQgYD1BK",
+        "fCCXs0reD1BL",
+        "y5V-1AK-D1BN",
+        "wZjqlHe9D1BN",
+        "7RPXPm1XD1BQ",
+        "G3DMSk97D1BR",
+        "SYKEe3vCD1BT",
+        "eAbwq1oLD1BW",
+        "_XKXcWO-D1BY",
+        "ciJ4dw_FD1BZ",
+        "HnUzHFQPD1Ba"
+      ],
       "include_colab_link": true
     }
   },
@@ -180,7 +226,7 @@
         "id": "mOV1rCA6D0_A",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 641
         },
         "outputId": "4ae77e6b-b185-46a7-92f6-88a2e8e923e5"
       },
@@ -873,77 +919,228 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hBEeAM7_D0_N"
+        "id": "hBEeAM7_D0_N",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "daeb90a3-b840-4348-b950-74a43bd5a0d6"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5')\n",
+        "nomes_carros"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Jetta Variant', 'Passat', 'Crossfox', 'DS5')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-mx_1E_tD0_P"
+        "id": "-mx_1E_tD0_P",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "1a637709-cb04-4f9d-be47-885720cba2ac"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros[0]"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Jetta Variant'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LMhyqnFID0_Q"
+        "id": "LMhyqnFID0_Q",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6abcf258-dbcf-4a59-8919-3b6d37ea4269"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros[1]"
+      ],
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Passat'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6btHff4BD0_T"
+        "id": "6btHff4BD0_T",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ae0dce45-e491-43e0-aa25-4d4561531371"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros[-1]"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'DS5'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K_Dc12xBD0_U"
+        "id": "K_Dc12xBD0_U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "203ebed6-463f-42ea-8ae0-8310b7aee1ce"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros[1:3]"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Passat', 'Crossfox')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zvrWYkkeD0_W"
+        "id": "zvrWYkkeD0_W",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d24812fc-9d52-48ed-ae76-4ca52a22f97f"
       },
       "source": [
         "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5', ('Fusca', 'Gol', 'C4'))\n",
         "nomes_carros"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Jetta Variant', 'Passat', 'Crossfox', 'DS5', ('Fusca', 'Gol', 'C4'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Dw7tbM2ED0_Z"
+        "id": "Dw7tbM2ED0_Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9a429a55-62cf-47a4-f1a6-478f9186a7a8"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros[-1]"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Fusca', 'Gol', 'C4')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SAMD3BtXD0_b"
+        "id": "SAMD3BtXD0_b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9761b5ac-91d1-4771-d1b9-c2efa31ddace"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros[-1][1]"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Gol'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
     },
     {
       "cell_type": "markdown",
