--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -23,8 +23,6 @@
       "provenance": [],
       "collapsed_sections": [
         "htjoBLwiD0_F",
-        "AOBjxBk8D0_f",
-        "u85Aou8WD0_s",
         "xo76nR8rD0_0",
         "wfWzOuztD0_0",
         "PQg-MLkGD0_-",
@@ -1154,23 +1152,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K53elKsYD0_c"
+        "id": "K53elKsYD0_c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba1126e2-b9c0-49cf-b692-edc5b5e457ac"
       },
       "source": [
         "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5')\n",
         "nomes_carros"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Jetta Variant', 'Passat', 'Crossfox', 'DS5')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "igZhZ5zdD0_d"
+        "id": "igZhZ5zdD0_d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5ee761cc-e3c3-461b-9339-931325b9f4aa"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for item in nomes_carros:\n",
+        "  print(item)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jetta Variant\n",
+            "Passat\n",
+            "Crossfox\n",
+            "DS5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1184,101 +1215,272 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UoEFnumhD0_f"
+        "id": "UoEFnumhD0_f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed4164a9-a1e8-4cee-ad1c-7c12e98994c3"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "nomes_carros = ('Jetta Variant', 'Passat', 'Crossfox', 'DS5')\n",
+        "nomes_carros"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('Jetta Variant', 'Passat', 'Crossfox', 'DS5')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AaCLcNYTD0_g"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "carro_1, carro_2, carro_3, carro_4 = nomes_carros"
+      ],
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TA71S9egD0_h"
+        "id": "TA71S9egD0_h",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b9ba6390-a148-4755-985b-34144a3f401a"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "carro_1"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Jetta Variant'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CHoJ034MD0_i"
+        "id": "CHoJ034MD0_i",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f2e743ff-d7ad-4dab-9bc7-1b9d2bb5ea6f"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "carro_2"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Passat'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oxJrOuCSD0_j"
+        "id": "oxJrOuCSD0_j",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4c7be3dc-71b5-461b-f073-abee9d37bdb7"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "carro_3"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Crossfox'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BbR9sB4BD0_k"
+        "id": "BbR9sB4BD0_k",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "9acc430c-579d-422b-b540-2de76998a41b"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "carro_4"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'DS5'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 72
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "aZvokrjPD0_m"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "_, A, _, B = nomes_carros"
+      ],
+      "execution_count": 73,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wZXDbVg0D0_o"
+        "id": "wZXDbVg0D0_o",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "66f065da-9b86-4e62-a647-b18e37c9244b"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "A"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Passat'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 74
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aWgDMBXiD0_p"
+        "id": "aWgDMBXiD0_p",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5c410e11-d350-43ba-f09c-f59d1f6e5c37"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "B"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'DS5'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 75
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "OdpgNh-ND0_q"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "_, C, *_ = nomes_carros"
+      ],
+      "execution_count": 77,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "upVYFnMdD0_r"
+        "id": "upVYFnMdD0_r",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "215a90ae-ca02-4455-d7fd-2e1964bc8840"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "C"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Passat'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1294,62 +1496,165 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PaC2oXGED0_t"
+        "id": "PaC2oXGED0_t",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f48a81ad-c7a2-4c87-d303-8ee522e0db6f"
       },
       "source": [
         "carros = ['Jetta Variant', 'Passat', 'Crossfox', 'DS5']\n",
         "carros"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Jetta Variant', 'Passat', 'Crossfox', 'DS5']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_02O1VnHD0_u"
+        "id": "_02O1VnHD0_u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abfb06a6-a976-4d4f-8044-61428fd08161"
       },
       "source": [
         "valores = [88078.64, 106161.94, 72832.16, 124549.07]\n",
         "valores"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[88078.64, 106161.94, 72832.16, 124549.07]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "roQK5nYRD0_v"
+        "id": "roQK5nYRD0_v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0dd340bb-5c60-4530-911a-5c05229b7aa9"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "list(zip(carros, valores))"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('Jetta Variant', 88078.64),\n",
+              " ('Passat', 106161.94),\n",
+              " ('Crossfox', 72832.16),\n",
+              " ('DS5', 124549.07)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_WRxIRHrD0_w"
+        "id": "_WRxIRHrD0_w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1b53761-cd57-4701-8aad-895460da1bca"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for item in zip(carros,valores):\n",
+        "  print(item)"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Jetta Variant', 88078.64)\n",
+            "('Passat', 106161.94)\n",
+            "('Crossfox', 72832.16)\n",
+            "('DS5', 124549.07)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2zIuhIILD0_x"
+        "id": "2zIuhIILD0_x",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a877efb-8d3d-4163-bcd4-c50d04d8b2a0"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for carro, valor in zip(carros,valores):\n",
+        "  print(carro, valor)"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Jetta Variant 88078.64\n",
+            "Passat 106161.94\n",
+            "Crossfox 72832.16\n",
+            "DS5 124549.07\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZJaL62IpD0_y"
+        "id": "ZJaL62IpD0_y",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "17ae7f8f-4ce2-432e-b36c-0b189c3ff5df"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for carro, valor in zip(carros,valores):\n",
+        "  if(valor > 100000):\n",
+        "    print(carro)"
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Passat\n",
+            "DS5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
